--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@momentum-ui/core": "^19.15.31",
+    "@momentum-ui/icons": "^8.33.0",
+    "@momentum-ui/tokens": "^1.7.1",
+    "@momentum-ui/utils": "^6.2.15",
+    "@momentum-ui/web-components": "^2.7.49",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "logrocket": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
